<resources>
    <string name="app_name">Food Redistribution</string>
    <string name="login_title">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">Don\'t have an account? Sign Up</string>
    <string name="signup_title">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="has_account">Already have an account? Sign In</string>
    <string name="restaurant">Restaurant</string>
    <string name="orphanage">Orphanage</string>
    <string name="donor">Individual Donor</string>
    <string name="needy">Needed Individual</string>
    <string name="delivery">Delivery Boy</string>
    <string name="select_role">Select Your Role</string>
    <string name="profile">Profile</string>
    <string name="change_language">Change Language</string>
    <string name="sign_out">Sign Out</string>
    <string name="post_food">Post Excess Food Donation</string>
    <string name="request_food">Request Food Support</string>
    <string name="active_donations">Your Active Donations</string>
    <string name="orphanage_requests">Orphanage Requests</string>
    <string name="available_food">Available Food Near You</string>
    <string name="my_requests">Your Recent Requests</string>
    <string name="delivery_tasks">Available Delivery Tasks</string>
    <string name="privacy_note"><b>Privacy note:</b> By default, your birthday and gender aren\'t shared with others using this app</string>
    <string name="next">Next</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name (Optional)</string>
    <string name="dob">Date of Birth (DD/MM/YYYY)</string>
    <string name="gender">Gender (Optional)</string>
    <string name="why_ask">Why we ask for birthday and gender?</string>
    <string name="verification">Verification</string>
    <string name="otp_subtitle">Enter the 4-digit code sent to your phone number</string>
    <string name="edit">Edit</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="resend">Didn\'t receive code? Resend</string>
    <string name="otp_success">OTP Verification Successful!</string>
</resources>